--- a/index.html
+++ b/index.html
@@ -18,26 +18,17 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.ico" />
   </head>
 
-  <body onresize="resize()">
+  <body>
     <div>
       <div class='index-container'></div>
     </div>
     <script src="main.js"></script>
   </body>
-
-
-
-
-
   <!-- jquery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
-  <!-- 切換按鈕的js -->
-  <script type="text/javascript" src="assets/js/switch.js">  </script>
   <!-- AJAX -->
   <script type="text/javascript" src="assets/js/ajax.js"></script>
-  <!-- memberApp javascript -->
-  <script src="assets/js/custom.js"></script>
   <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
   <script src="assets/js/scripts.js"></script>
 </html>
