--- a/member.html
+++ b/member.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 		<link rel="icon" type="image/png" href="assets/img/favicon.ico" />
 	</head>
-	<body onresize="resize()">
+	<body>
     <div class="container">
       <div class="member-containter"></div>
     </div>
@@ -21,7 +21,6 @@
   <!-- script references -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/custom.js"></script>
     <!--masonry-->
     <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
     <script src="assets/js/scripts.js"></script>
